--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gotham = "0.5.0-rc.1"
+nickel = "*"
 hyper = "0.13.7"
 mime = "0.3.16"
 comrak = "0.8.2"
