--- a/dockerfile.test
+++ b/dockerfile.test
@@ -1,3 +1,4 @@
+# alpine
 FROM alpine:latest
 LABEL Name=rusty_cms Version=0.0.1
 RUN apk --no-cache add curl
@@ -12,6 +13,7 @@ CMD ["target/release/rusty_cms"]
 
 
 
+# rust
 FROM rust:latest
 LABEL Name=rusty_cms Version=0.0.1
 WORKDIR /rusty_cms
@@ -19,3 +21,21 @@ EXPOSE 7878
 COPY . .
 RUN cargo install --path .
 CMD ["rusty_cms"]
+
+
+
+# minimal
+FROM rust:latest AS build
+WORKDIR /usr/src
+RUN rustup target add x86_64-unknown-linux-musl
+
+WORKDIR /app
+COPY . .
+RUN cargo install --target x86_64-unknown-linux-musl --path .
+
+FROM scratch
+COPY --from=build /usr/local/cargo/bin/rusty_cms .
+USER 1000
+EXPOSE 7878
+RUN ls
+CMD ["./rusty_cms"]
